[gd_scene load_steps=14 format=3 uid="uid://dm2tsdpbh1v0g"]

[ext_resource type="Script" path="res://src/yoke_attack.gd" id="1_a2lml"]
[ext_resource type="Texture2D" uid="uid://dglyptcs1o2sb" path="res://Assets/YokeGuy/yokeguy.png" id="2_6w87s"]

[sub_resource type="AtlasTexture" id="AtlasTexture_h7lsh"]
atlas = ExtResource("2_6w87s")
region = Rect2(80, 45, 15, 15)

[sub_resource type="AtlasTexture" id="AtlasTexture_0a6wl"]
atlas = ExtResource("2_6w87s")
region = Rect2(0, 45, 15, 15)

[sub_resource type="AtlasTexture" id="AtlasTexture_ntsks"]
atlas = ExtResource("2_6w87s")
region = Rect2(16, 45, 15, 15)

[sub_resource type="AtlasTexture" id="AtlasTexture_ndb74"]
atlas = ExtResource("2_6w87s")
region = Rect2(32, 45, 15, 15)

[sub_resource type="AtlasTexture" id="AtlasTexture_86pqp"]
atlas = ExtResource("2_6w87s")
region = Rect2(48, 45, 15, 15)

[sub_resource type="AtlasTexture" id="AtlasTexture_trjwl"]
atlas = ExtResource("2_6w87s")
region = Rect2(64, 45, 15, 15)

[sub_resource type="AtlasTexture" id="AtlasTexture_ypyn4"]
atlas = ExtResource("2_6w87s")
region = Rect2(80, 45, 15, 15)

[sub_resource type="SpriteFrames" id="SpriteFrames_o8qir"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_h7lsh")
}],
"loop": true,
"name": &"splat",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_0a6wl")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ntsks")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ndb74")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_86pqp")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_trjwl")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ypyn4")
}],
"loop": true,
"name": &"walk",
"speed": 2.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_uom05"]
size = Vector2(16.1716, 6.94488)

[sub_resource type="CircleShape2D" id="CircleShape2D_3huih"]
radius = 8.26193

[sub_resource type="RectangleShape2D" id="RectangleShape2D_adfrr"]
size = Vector2(15.7748, 0.754994)

[node name="YokeAttack" type="CharacterBody2D"]
texture_filter = 1
script = ExtResource("1_a2lml")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
scale = Vector2(2, 2)
sprite_frames = SubResource("SpriteFrames_o8qir")
animation = &"walk"
frame_progress = 0.177447

[node name="BounceArea" type="Area2D" parent="."]
position = Vector2(-0.207455, -8.83507)

[node name="CollisionShape2D" type="CollisionShape2D" parent="BounceArea"]
position = Vector2(0.581633, 7.5227)
shape = SubResource("RectangleShape2D_uom05")

[node name="PainArea" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="PainArea"]
position = Vector2(0.496063, 7.83779)
shape = SubResource("CircleShape2D_3huih")
debug_color = Color(0, 0.6, 0.701961, 0.419608)

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0.572603, 14.581)
shape = SubResource("RectangleShape2D_adfrr")

[node name="DespawnTimer" type="Timer" parent="."]
wait_time = 5.0
autostart = true

[connection signal="body_entered" from="BounceArea" to="." method="_on_bounce_area_body_entered"]
[connection signal="body_entered" from="PainArea" to="." method="_on_pain_area_body_entered"]
[connection signal="timeout" from="DespawnTimer" to="." method="_on_despawn_timer_timeout"]
